--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,33 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //log打印
     compile 'com.orhanobut:logger:2.1.1'
+    //二维码相关
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.3.0'
+    //圆形头像
     compile 'de.hdodenhof:circleimageview:2.2.0'
+    //设置相关
     compile 'com.android.support:preference-v7:26.1.0'
+    //高德地图API
+    compile 'com.amap.api:map2d:5.2.0'
+    compile 'com.amap.api:navi-3dmap:6.0.0_3dmap6.0.0'
+    compile 'com.amap.api:search:5.7.0'
+    compile 'com.amap.api:location:3.8.0'
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
+    compile 'com.google.code.gson:gson:2.8.0'//Gson 库
+    //RxJava
+    compile 'io.reactivex:rxjava:1.1.5'
+    //RxAndroid
+    compile 'io.reactivex:rxandroid:1.1.0'
+    //转换器，请求结果转换成Model
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //配合Rxjava 使用
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //debug
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
