--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -42,8 +47,10 @@ dependencies {
     compile 'com.amap.api:search:5.7.0'
     compile 'com.amap.api:location:3.8.0'
     //retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
-    compile 'com.google.code.gson:gson:2.8.0'//Gson 库
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    //retrofit
+    compile 'com.google.code.gson:gson:2.8.0'
+    //Gson 库
     //RxJava
     compile 'io.reactivex:rxjava:1.1.5'
     //RxAndroid
@@ -54,6 +61,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     //debug
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
