--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeTealDark">
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="ae50e60f11ec43a2d34a386baa6973e9" />
         <activity
             android:name=".view.activity.MainActivity"
             android:label="@string/title_activity_main">
