--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,15 +45,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeTealDark">
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="ae50e60f11ec43a2d34a386baa6973e9" />
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="ae50e60f11ec43a2d34a386baa6973e9"/>
         <activity
             android:name=".view.activity.MainActivity"
             android:label="@string/title_activity_main">
-            <intent-filter android:label="@string/app_name">
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".view.activity.ScanningActivity"
@@ -67,7 +66,13 @@
         <activity android:name=".view.activity.LoginActivity" />
         <activity
             android:name=".view.activity.SplashActivity"
-            android:theme="@style/AppThemeSplash"></activity>
+            android:theme="@style/AppThemeSplash">
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
