--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'x86'
+        }
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -61,5 +66,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     //debug
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    //阿里推送
+    compile 'com.aliyun.ams:alicloud-android-push:3.1.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
