--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,12 @@ dependencies {
     //设置相关
     compile 'com.android.support:preference-v7:26.1.0'
     //高德地图API
-    compile 'com.amap.api:map2d:5.2.0'
-    compile 'com.amap.api:navi-3dmap:6.0.0_3dmap6.0.0'
-    compile 'com.amap.api:search:5.7.0'
-    compile 'com.amap.api:location:3.8.0'
+    //3D地图so及jar
+    compile 'com.amap.api:3dmap:latest.integration'
+    //定位功能
+    compile 'com.amap.api:location:latest.integration'
+    //搜索功能
+    compile 'com.amap.api:search:latest.integration'
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     //retrofit
